fix: index.html

--- a/index.html
+++ b/index.html
@@ -14346,8 +14346,8 @@ a.anchor-link {
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
 <table>
     <tr>
-        <td><img src="img/before_fluentd.png" width="100%"></td>
-        <td><img src="img/after_fluentd.png" width="100%"></td>
+        <td><img src="img/before_fluentd.PNG" width="100%"></td>
+        <td><img src="img/after_fluentd.PNG" width="100%"></td>
     </tr>
 </table>
 </div>
